Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16763

Qml Profiler: Timeline event compression for memory events doesn't work [REG 4.0 -> 4.1]

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt Creator 4.1.0
    • Qt Creator 4.1.0-rc1
    • QML Profiler
    • None
    • 8c80a8626674563cf17add41deaa522417e63d95

      Apparently, in the presence of too many memory events, the compression algorithm fails. The grey boxes are drawn under, rather than in, the memory category.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            ulherman Ulf Hermann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes